--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "daily-intervals",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Create intervals that are based on the time",
   "main": "./src/dailyinterval.js",
   "type": "module",
@@ -16,8 +16,5 @@
   "bugs": {
     "url": "https://github.com/TelevisionNinja/daily-intervals/issues"
   },
-  "homepage": "https://github.com/TelevisionNinja/daily-intervals#readme",
-  "dependencies": {
-    "no-drift": "^2.0.0"
-  }
+  "homepage": "https://github.com/TelevisionNinja/daily-intervals#readme"
 }
